# s1iw_catalogue

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  design_document_ifr_s1_iw_exhaustive_catalogue.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  cd.yml  ci.yml
assets/listings/: dummy_grd_listing_lion.txt  dummy_grd_listing_zebre.txt  dummy_slc_listing_castor.txt  dummy_slc_listing_hibou.txt
end2end/: check_ecmwf_extraction.py  check_update_workflow.py  check_ww3_extraction.py  dummy_catalogue_ecmwf_map.py  dummy_catalogue_ww3_map_check.py
s1iw_catalogue/: __init__.py  _version.py  _version.pyi  backup.py  catalogue.py  cli.py  config.py  config.yml  content_catalogue_header.py  ecmwf_extractor.py  localconfig.yml  schema.py  stats.py  updater.py  ww3_extractor.py
s1iw_catalogue/web/: __init__.py  app.py  design_web_document.md  models.py  template_engine.py
s1iw_catalogue/web/routes/: __init__.py  browse.py  stats.py
s1iw_catalogue/web/static/css/: browse.css  style.css
s1iw_catalogue/web/static/js/: browse.js  filters.js  main.js
s1iw_catalogue/web/templates/: base.html  browse.html  hello.html  index.html
s1iw_catalogue/web/utils/: __init__.py  data_loader.py  visualizations.py
tests/: test_backup.py  test_catalogue.py  test_cli.py  test_config.py  test_hello.py  test_imports.py  test_schema.py  test_stats.py  test_updater.py
tests/test_example/: test_catalogue.py  test_cli.py  test_config.py  test_imports.py  test_schema.py  test_updater.py
