[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "s1iw_catalogue"
dynamic = ["version"]
description = "Catalogue exhaustif des produits Sentinel-1 IW pour Ifremer."
readme = "README.md"
authors = [{ name = "lops-wave", email = "antoine.grouazel@ifremer.fr" }]
license = { text = "MIT" }
repository = "https://github.com/agrouaze/s1iw_catalogue"
homepage = "https://github.com/agrouaze/s1iw_catalogue"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"

dependencies = [
  "s1ifr",
]

[project.optional-dependencies]
dev = [
  "bandit",
  "black",
  "darglint",
  "isort",
  "mypy",
  "mypy-extensions",
  "pre-commit",
  "pydocstyle",
  "pylint",
  "pytest",
  "pyupgrade",
  "safety",
  "coverage",
  "coverage-badge",
  "pytest-html",
  "pytest-cov",
]

[tool.pip]
extra-index-url = [
  "https://gitlab.ifremer.fr/api/v4/projects/4991/packages/pypi/simple",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "s1iw_catalogue/_version.py"

[tool.black]
target-version = ["py311"]
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
py_version = 311
line_length = 88
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
python_version = 3.11
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[tool.coverage.paths]
source = ["s1iw_catalogue"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true